--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -1,159 +1,324 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Lorenzo de Lijser | Foodloose</title>
 
-<head>
-  <title>Lorenzo de Lijser | Foodloose</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Lorenzo de Lijser" />
+    <meta
+      name="description"
+      content="Digital Design porfolio website of Lorenzo de Lijser"
+    />
+    <meta
+      name="keywords"
+      content="Digital Design, Portfolio, Lorenzo de Lijser, Front-End Development, HTML, CSS, JavaScript, Foodloose"
+    />
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser">
-  <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="keywords"
-    content="Digital Design, Portfolio, Lorenzo de Lijser, Front-end Development, HTML, CSS, JavaScript, Foodloose">
+    <link rel="stylesheet" href="../../css/style.css" />
 
-  <link rel="stylesheet" href="../../css/style.min.css">
+    <link
+      rel="me"
+      href="https://www.linkedin.com/in/lorenzo-de-lijser/"
+      type="text/html"
+    />
+    <link rel="me" href="mailto:lorenzodelijser.nl" />
 
-  <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
-  <link rel="me" href="mailto:lorenzodelijser@gmail.com">
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Portfolio Lorenzo de Lijser"
+    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link rel="apple-touch-icon" href="../../img/icon-192.png" />
+    <link rel="apple-touch-startup-image" href="../../img/launch.png" />
+    <link rel="manifest" href="../../manifest.webmanifest" />
 
-  <meta name="apple-touch-fullscreen" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Portfolio Lorenzo de Lijser">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="apple-touch-icon" href="../../img/icon-192.png">
-  <link rel="apple-touch-startup-image" href="../../img/launch.png">
-  <link rel="manifest" href="../../manifest.webmanifest">
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../img/icon-16.png"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../img/icon-32.png"
+      sizes="32x32"
+    />
 
-  <link rel="icon" type="image/png" href="../../img/icon-16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="../../img/icon-32.png" sizes="32x32">
+    <meta name="theme-color" content="#000000" />
 
-  <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="Lorenzo de Lijser | Portfolio" />
+    <meta
+      property="og:description"
+      content="Digital Design porfolio website of Lorenzo de Lijser"
+    />
+    <meta property="og:image" content="../../img/social_share_1200x630.png" />
+    <meta property="og:url" content="https://www.lorenzodelijser.nl/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio" />
 
-  <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
-  <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta property="og:image" content="../../img/social_share_1200x630.png">
-  <meta property="og:url" content="https://www.lorenzodelijser.nl/">
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Digital Design porfolio website of Lorenzo de Lijser"
+    />
+    <meta name="twitter:image:src" content="../../img/icon-144.png" />
+  </head>
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
-  <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="twitter:image:src" content="../../img/icon-144.png">
-</head>
-
-<body>
-
-  <div class="menu-bar">
-    <a href="../../#web">Overview</a>
-    <a href="../../#about-me">About Lorenzo</a>
-  </div>
-
-  <header class="project foodloose">
-    <h1>Foodloose</h1>
-    <p>
-      <strong>
-        <svg height="12px" viewBox="0 0 512 512">
-          <path fill="currentColor"
-            d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z">
-          </path>
+  <body>
+    <div class="menu-bar">
+      <a href="../../#web-development">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-grid"
+        >
+          <rect x="3" y="3" width="7" height="7"></rect>
+          <rect x="14" y="3" width="7" height="7"></rect>
+          <rect x="14" y="14" width="7" height="7"></rect>
+          <rect x="3" y="14" width="7" height="7"></rect>
         </svg>
-        Roles:
-      </strong>
-      Front-End Developer & UX Designer
-    </p>
-    <p>
-      <strong>
-        <svg height="12px" viewBox="0 0 384 512">
-          <path fill="currentColor"
-            d="M298.028 214.267L285.793 96H328c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H56C42.745 0 32 10.745 32 24v48c0 13.255 10.745 24 24 24h42.207L85.972 214.267C37.465 236.82 0 277.261 0 328c0 13.255 10.745 24 24 24h136v104.007c0 1.242.289 2.467.845 3.578l24 48c2.941 5.882 11.364 5.893 14.311 0l24-48a8.008 8.008 0 0 0 .845-3.578V352h136c13.255 0 24-10.745 24-24-.001-51.183-37.983-91.42-85.973-113.733z">
-          </path>
-        </svg>
-        Task:
-      </strong>
-      Combine databases to develop a new feature
-    </p>
-    <p>
-      <strong>
-        <svg height="12px" viewBox="0 0 512 512">
-          <path fill="currentColor"
-            d="M502.63 214.63l-45.25-45.25c-6-6-14.14-9.37-22.63-9.37H384V80c0-26.51-21.49-48-48-48H176c-26.51 0-48 21.49-48 48v80H77.25c-8.49 0-16.62 3.37-22.63 9.37L9.37 214.63c-6 6-9.37 14.14-9.37 22.63V320h128v-16c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v16h128v-16c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v16h128v-82.75c0-8.48-3.37-16.62-9.37-22.62zM320 160H192V96h128v64zm64 208c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-16H192v16c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-16H0v96c0 17.67 14.33 32 32 32h448c17.67 0 32-14.33 32-32v-96H384v16z">
-          </path>
-        </svg>
-        Tools:
-      </strong>
-      HTML, CSS & JavaScript
-    </p>
-    <p>
-      <strong>
-        <svg height="12px" viewBox="0 0 640 512">
-          <path fill="currentColor"
-            d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z">
-          </path>
-        </svg>
-        Team:
-      </strong>
-      of Four People
-    </p>
-  </header>
-
-  <div class="project-background">
-    <div class="project-wrapper-text">
-      <h2>Assignment</h2>
-      <p>This web development project was assigned by the academy, in the division: <i>Tech</i>. We were assigned to
-        <i>combine</i> databases to develop a new feature. The project was created using HTML, CSS, and JavaScript.</p>
-
-      <figure>
-        <img src="../../img/foodloose/01.png" alt="Foodloose - Main Menu in Foodloose">
-        <figcaption>Main Menu in Foodloose: "What did you Eat?"</figcaption>
-      </figure>
-
-      <p>For this project, we combined data from the <i>Dunkin' Donuts</i> and <i>Spotify</i>. When you visit the
-        website, you can enter what you have consumed at Dunkin' Donuts. The website generates a playlist from data of
-        Spotify and Dunkin' Donuts.</p>
-
-      <h2>Process</h2>
-      <p>A lot of ideas were gathered by making paper prototypes. I also made some little prototypes in HTML and CSS to
-        explore possibilities.</p>
-
-      <figure>
-        <img src="../../img/foodloose/03.png" alt="Foodloose - Prototype in HTML and CSS">
-        <figcaption>Prototypes in HTML and CSS</figcaption>
-      </figure>
-
-      <h2>Result</h2>
-
-      <figure>
-        <img src="../../img/foodloose/04.png" alt="Foodloose - Different Screens in Mobile Sizes">
-        <figcaption>Different Screens in Mobile Sizes.</figcaption>
-      </figure>
-
-      <p>Feel free to create your own playlist by clicking the button below.</p>
-
-      <a href="./app" target="_blank">
-        <div class="button-to-app button-to-default">Click Here to Create Your Own Playlist</div>
+        Overview
       </a>
+      <a href="../../#about-me">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-smile"
+        >
+          <circle cx="12" cy="12" r="10"></circle>
+          <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
+          <line x1="9" y1="9" x2="9.01" y2="9"></line>
+          <line x1="15" y1="9" x2="15.01" y2="9"></line>
+        </svg>
+        About Me
+      </a>
+    </div>
 
-      <div class="buttons">
-        <a href="../../#web">Overview</a>
-        <a href="../tuneback">Next Project</a>
+    <div class="header-background">
+      <div class="project foodloose">
+        <h1>Foodloose</h1>
+        <p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-user"
+          >
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+            <circle cx="12" cy="7" r="4"></circle>
+          </svg>
+          <strong>
+            Role:
+          </strong>
+          UX Designer & Front-End Developer
+        </p>
+        <p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-clipboard"
+          >
+            <path
+              d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
+            ></path>
+            <rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect>
+          </svg>
+          <strong>
+            Task:
+          </strong>
+          Combine databases to develop a new feature
+        </p>
+        <p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-tool"
+          >
+            <path
+              d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"
+            ></path>
+          </svg>
+          <strong>
+            Tools:
+          </strong>
+          HTML, CSS & JavaScript
+        </p>
+        <p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-users"
+          >
+            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+            <circle cx="9" cy="7" r="4"></circle>
+            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+          </svg>
+          <strong>
+            Team:
+          </strong>
+          Four People
+        </p>
       </div>
     </div>
-  </div>
 
-  <footer>
-    <a href="https://www.linkedin.com/in/lorenzo-de-lijser/" target="_top" aria-label="Link to my LinkedIn profile">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-        <path fill="#FFF" class="st0"
-          d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416h-.1zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
-      </svg>
-    </a>
-    <p>Thank you <i>very much</i> for checking out my portfolio.<br /> If you're interested feel free to <a
-        href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com
-    </p>
-  </footer>
+    <div class="project-background">
+      <div class="project-wrapper-text">
+        <h2>Assignment</h2>
+        <p>
+          This web development project was assigned by the academy, in the
+          division: <i>Tech</i>. We were assigned to <i>combine</i> databases to
+          develop a new feature. The project was created using HTML, CSS, and
+          JavaScript.
+        </p>
 
-</body>
+        <figure>
+          <img
+            src="../../img/foodloose/01.png"
+            alt="Foodloose - Main Menu in Foodloose"
+          />
+          <figcaption>Main Menu in Foodloose: "What did you Eat?"</figcaption>
+        </figure>
 
+        <p>
+          For this project, we combined data from the <i>Dunkin' Donuts</i> and
+          <i>Spotify</i>. When you visit the website, you can enter what you
+          have consumed at Dunkin' Donuts. The website generates a playlist from
+          data of Spotify and Dunkin' Donuts.
+        </p>
+
+        <h2>Process</h2>
+        <p>
+          A lot of ideas were gathered by making paper prototypes. I also made
+          some little prototypes in HTML and CSS to explore possibilities.
+        </p>
+
+        <figure>
+          <img
+            src="../../img/foodloose/03.png"
+            alt="Foodloose - Prototype in HTML and CSS"
+          />
+          <figcaption>Prototypes in HTML and CSS</figcaption>
+        </figure>
+
+        <h2>Result</h2>
+
+        <figure>
+          <img
+            src="../../img/foodloose/04.png"
+            alt="Foodloose - Different Screens in Mobile Sizes"
+          />
+          <figcaption>Different Screens in Mobile Sizes.</figcaption>
+        </figure>
+
+        <p>
+          Feel free to create your own playlist by clicking the button below.
+        </p>
+
+        <a href="./app" target="_blank">
+          <div class="button-to-app button-to-default">
+            Click Here to Create Your Own Playlist
+          </div>
+        </a>
+
+        <div class="buttons">
+          <a href="../../#web-development">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feather feather-grid"
+            >
+              <rect x="3" y="3" width="7" height="7"></rect>
+              <rect x="14" y="3" width="7" height="7"></rect>
+              <rect x="14" y="14" width="7" height="7"></rect>
+              <rect x="3" y="14" width="7" height="7"></rect>
+            </svg>
+            Overview
+          </a>
+          <a href="../tuneback">Next Project</a>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <a
+        href="https://www.linkedin.com/in/lorenzo-de-lijser/"
+        target="_top"
+        aria-label="Link to my LinkedIn profile"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            fill="#FFF"
+            class="st0"
+            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416h-.1zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+          />
+        </svg>
+      </a>
+      <p>
+        Thank you <i>very much</i> for checking out my portfolio.<br />
+        If you're interested feel free to
+        <a href="mailto:hi@lorenzodelijser.nl?Subject=Hi!" class="mail-me"
+          >mail me</a
+        >
+        at hi@lorenzodelijser.nl
+      </p>
+    </footer>
+  </body>
 </html>
