--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -26,7 +26,7 @@
       href="https://www.linkedin.com/in/lorenzo-de-lijser/"
       type="text/html"
     />
-    <link rel="me" href="mailto:lorenzodelijser.nl" />
+    <link rel="me" href="mailto:hi@lorenzodelijser.nl" />
 
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -39,12 +39,6 @@
     <link rel="apple-touch-startup-image" href="../../img/launch.png" />
     <link rel="manifest" href="../../manifest.webmanifest" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="../../img/icon-16.png"
-      sizes="16x16"
-    />
     <link
       rel="icon"
       type="image/png"
@@ -75,7 +69,7 @@
 
   <body>
     <div class="menu-bar">
-      <a href="../../#web-development">
+      <a href="../../#web-development" onmouseenter="overview()">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -93,9 +87,9 @@
           <rect x="14" y="14" width="7" height="7"></rect>
           <rect x="3" y="14" width="7" height="7"></rect>
         </svg>
-        Overview
+        <span class="link">Overview</span>
       </a>
-      <a href="../../#about-me">
+      <a href="../../#about-me" onmouseenter="smile()">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -110,15 +104,15 @@
         >
           <circle cx="12" cy="12" r="10"></circle>
           <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
-          <line x1="9" y1="9" x2="9.01" y2="9"></line>
+          <line class="right-eye" x1="9" y1="9" x2="9.01" y2="9"></line>
           <line x1="15" y1="9" x2="15.01" y2="9"></line>
         </svg>
-        About Me
+        <span class="link">About Me</span>
       </a>
     </div>
 
     <div class="header-background">
-      <div class="project foodloose">
+      <div class="project">
         <h1>Foodloose</h1>
         <p>
           <svg
@@ -136,9 +130,7 @@
             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
             <circle cx="12" cy="7" r="4"></circle>
           </svg>
-          <strong>
-            Role:
-          </strong>
+          <strong>Role:</strong>
           UX Designer & Front-End Developer
         </p>
         <p>
@@ -159,9 +151,7 @@
             ></path>
             <rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect>
           </svg>
-          <strong>
-            Task:
-          </strong>
+          <strong>Task:</strong>
           Combine databases to develop a new feature
         </p>
         <p>
@@ -253,26 +243,42 @@
 
         <h2>Result</h2>
 
-        <figure>
-          <img
-            src="../../img/foodloose/04.png"
-            alt="Foodloose - Different Screens in Mobile Sizes"
-          />
-          <figcaption>Different Screens in Mobile Sizes.</figcaption>
-        </figure>
+        <img
+          src="../../img/foodloose/04.png"
+          alt="Foodloose - Different Screens in Mobile Sizes"
+          class="image-crop"
+        />
 
         <p>
           Feel free to create your own playlist by clicking the button below.
         </p>
 
         <a href="./app" target="_blank">
-          <div class="button-to-app button-to-default">
-            Click Here to Create Your Own Playlist
+          <div class="button-to-app button-to-default" onmouseenter="GoToApp()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feather feather-arrow-up-right"
+            >
+              <line x1="7" y1="17" x2="17" y2="7"></line>
+              <polyline points="7 7 17 7 17 17"></polyline>
+            </svg>
+            <span class="link">Click Here to Check the Result</span>
           </div>
         </a>
 
         <div class="buttons">
-          <a href="../../#web-development">
+          <a
+            href="../../#web-development"
+            onmouseenter="BottomNavigationOverview()"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
@@ -290,35 +296,99 @@
               <rect x="14" y="14" width="7" height="7"></rect>
               <rect x="3" y="14" width="7" height="7"></rect>
             </svg>
-            Overview
+            <span class="link">Overview</span>
           </a>
-          <a href="../tuneback">Next Project</a>
+          <a href="../tuneback" onmouseenter="BottomNavigationNext()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feather feather-arrow-right"
+            >
+              <line x1="5" y1="12" x2="19" y2="12"></line>
+              <polyline points="12 5 19 12 12 19"></polyline>
+            </svg>
+            <span class="link">Next Project</span>
+          </a>
         </div>
       </div>
     </div>
 
     <footer>
-      <a
-        href="https://www.linkedin.com/in/lorenzo-de-lijser/"
-        target="_top"
-        aria-label="Link to my LinkedIn profile"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-          <path
-            fill="#FFF"
-            class="st0"
-            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416h-.1zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
-          />
-        </svg>
-      </a>
-      <p>
-        Thank you <i>very much</i> for checking out my portfolio.<br />
-        If you're interested feel free to
-        <a href="mailto:hi@lorenzodelijser.nl?Subject=Hi!" class="mail-me"
-          >mail me</a
-        >
-        at hi@lorenzodelijser.nl
-      </p>
+      <div class="footer-wrapper">
+        <a href="https://twitter.com/lorenzodelijser">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-twitter"
+          >
+            <path
+              d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
+            ></path>
+          </svg>
+        </a>
+        <a href="https://www.linkedin.com/in/lorenzo-de-lijser/">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-linkedin"
+          >
+            <path
+              d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+            ></path>
+            <rect x="2" y="9" width="4" height="12"></rect>
+            <circle cx="4" cy="4" r="2"></circle>
+          </svg>
+        </a>
+
+        <a href="mailto:hi@lorenzodelijser.nl?Subject=Hi!">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-mail"
+          >
+            <path
+              d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+            ></path>
+            <polyline points="22,6 12,13 2,6"></polyline>
+          </svg>
+        </a>
+
+        <p>
+          Thank you <i>very much</i> for checking out my portfolio.<br />
+          If you're interested feel free to contact me.
+        </p>
+      </div>
     </footer>
+
+    <script src="../../js/anime.min.js"></script>
+    <script src="../../js/animation.js"></script>
   </body>
 </html>
